# fiware-IoTAgent-Cplusplus

./: .clang-format  .gitignore  BaseChangeLog.txt  CMakeLists.txt  ContributionPolicy.txt  LICENSE.txt  MqttChangeLog.txt  README.md  TTChangeLog.txt  ULChangeLog.txt  config.json
src/: CMakeLists.txt
src/app/: main.cc
src/esp/: CMakeLists.txt
src/esp/logger/: CC_Logger.cpp
src/esp/logger/include/: CC_Logger.h  CC_LoggerConfig.h
src/esp/plugins/: CMakeLists.txt~
src/esp/plugins/input_buffer/: ESP_Plugin_Input_Buffer.cpp  ESP_Plugin_Input_Buffer.h
src/esp/plugins/input_mqtt/: ESP_MQTT_Broker.cpp  ESP_MQTT_Broker.h  ESP_MQTT_Launcher.cpp  ESP_MQTT_Launcher.h  ESP_MosquittoImpl.cpp  ESP_MosquittoImpl.h  ESP_MqttBuffer.cpp  ESP_MqttBuffer.h  ESP_Plugin_Input_Mqtt.cpp  ESP_Plugin_Input_Mqtt.h  IMosquitto.h  IMqttCallback.h
src/esp/plugins/output_file/: ESP_Plugin_Output_File.cpp  ESP_Plugin_Output_File.h
src/esp/plugins/output_iot/: ESP_Plugin_Output_IoT.cpp  ESP_Plugin_Output_IoT.h
src/esp/plugins/parser_basic/: ESP_Plugin_Parser_Basic.cpp  ESP_Plugin_Parser_Basic.h
src/esp/plugins/postprocessor_json/: ESP_Plugin_Postprocessor_json.cpp  ESP_Plugin_Postprocessor_json.h
src/esp/plugins/postprocessor_sensorml/: ESP_Plugin_Postprocessor_Sensorml.h  (+3 more)
src/esp/source/: CMakeLists.txt  ESPLib.cpp  ESP_Attribute.cpp  ESP_SBC_Command.cpp  ESP_StringUtils.cpp  ESP_TimeUtils.cpp  ESP_XmlUtils.cpp  TDA.cpp  main.cpp
src/esp/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp
src/manager/: CMakeLists.txt  admin_mgmt_service.cc  admin_mgmt_service.h
src/modbus/: CMakeLists.txt  modbus.cc  modbus.h  operation_processor.cc  operation_processor.h
src/mqtt/: CMakeLists.txt  IotaMqttCommands.h  IotaMqttService.cc  IotaMqttService.h  IotaMqttServiceImpl.cc  IotaMqttServiceImpl.h  MqttService.cc  MqttService.h  config-sa.json  init_mosquitto.sh  sensormqtt-json.xml  sensormqtt.xml
src/mqtt/config/: MqttService.xml  aclfile.mqtt  mosquitto.conf  sensormqtt.xml
src/ngsi/: Attribute.cc  Attribute.h  AttributeRegister.cc  AttributeRegister.h  CMakeLists.txt  ContextElement.cc  ContextElement.h  ContextRegistration.cc  ContextRegistration.h  ContextResponse.cc  ContextResponse.h  ContextResponses.cc  ContextResponses.h  Entity.cc  Entity.h  NotifyCondition.cc  NotifyCondition.h  QueryContext.cc  QueryContext.h  RegisterContext.cc  RegisterContext.h  RegisterResponse.cc  RegisterResponse.h  SubscribeContext.cc  SubscribeContext.h  SubscribeResponse.cc  SubscribeResponse.h  UpdateContext.cc  UpdateContext.h  ngsi_const.cc  ngsi_const.h
src/rest/: CMakeLists.txt  command_handle.cc  command_handle.h  http_filter.h  iot_cb_comm.cc  iot_cb_comm.h  iot_duration.cc  iot_duration.h  iot_stat_value.cc  iot_stat_value.h  iot_statistic.cc  iot_statistic.h  media_filter.cc  media_filter.h  oauth_filter.cc  oauth_filter.h  process.cc  process.h  rest_functions.cc  rest_functions.h  rest_handle.cc  rest_handle.h  riot_conf.cc  riot_conf.h  tcp_service.cc  tcp_service.h  types.cc  types.h
src/sample_test/: CMakeLists.txt  test_command_service.cc  test_command_service.h  test_service.cc  test_service.h
src/services/: CMakeLists.txt  admin_mgmt_service.cc  admin_mgmt_service.h  admin_service.cc  admin_service.h  ngsi_service.cc  ngsi_service.h
src/thinkingthings/: CMakeLists.txt  DecodeTTJSON.cpp  DecodeTTJSON.h  QueryContextWrapper.cpp  QueryContextWrapper.h  SearchResponse.cpp  SearchResponse.h  TTService.cpp  TTService.h
src/thinkingthings/config/: TTService.xml  sensortt-open.xml
src/ultra_light/: CMakeLists.txt  RiotSOSDef.h  ULInsertObservation.cc  ULInsertObservation.h  ul20_service.cc  ul20_service.h
src/util/: CMakeLists.txt  CommandResponse.h  FuncUtil.cc  FuncUtil.h  KVP.cc  KVP.h  RiotISO8601.cc  RiotISO8601.h  TTCBPublisher.cc  TTCBPublisher.h  access_control.cc  access_control.h  alarm.cc  alarm.h  arguments.cc  arguments.h  async_comm.cc  async_comm.h  cache.cc  cache.h  collection.cc  collection.h  command.cc  command.h  command_cache.cc  command_cache.h  command_collection.cc  command_collection.h  common.h  csv_reader.cc  csv_reader.h  dev_file.cc  dev_file.h  device.h  device_collection.cc  device_collection.h  http_client.cc  http_client.h  iot_url.cc  iot_url.h  (+23 more)
tests/: CMakeLists.txt
tests/e2e_tests/: requirements.txt
tests/e2e_tests/common/: __init__.py  functions.py  gw_configuration.py  gw_mqtt_commands.py  steps.py  user_steps.py
tests/esp/: CMakeLists.txt  ESPTestRunner.cpp  MqttBufferTests.cpp  MqttMessagesTests.cpp  MqttWrapperTests.cpp  PluginMqttTests.cpp  PushCommandsTest.cpp  Readme  TDAParserTests.cpp  TimeZoneTests.cpp
tests/esp/h/: MockMosquitto.h  MockPluginInputMqtt.h  MockPluginOutput.h  MqttBufferTests.h  MqttMessagesTests.h  MqttWrapperTests.h  PluginMqttTests.h  PushCommandsTest.h  TDAParserTests.h  TimeZoneTests.h
tests/esp/samples/: cmdresponse.sml  location_29-29.sml  sensormqtt.xml  sensormqtt_fixed_timestamp.xml  sensormqtt_fixed_timestamp_ul20.xml  sensortt-open.xml  sensortt.xml  temperature_33.sml  test_sensor.xml  test_sensor_conditions.xml  test_sensor_ul20.xml
tests/iotagent/: ApiKeyRunner.cc  ApikeyTest.cc  ApikeyTest.h  CMakeLists.txt  CsvTest.cc  CsvTest.h  JsonTest.cc  JsonTest.h  MockIotaMqttService.h  MockQueryContextWrapper.h  MqttService.xml  RestFunctionTest.cc  RestFunctionTest.h  TTBufferTests.cc  TTBufferTests.h  TTService.xml  UtilFunctionTest.cc  UtilFunctionTest.h  adminManagerTest.cc  adminManagerTest.h  adminMgmTest.cc  adminMgmTest.h  adminMgm_tests.cc  adminTest.cc  adminTest.h  admin_mgmt_test.cc  admin_tests.cc  baseTest.cc  baseTest.h  cacheTests.cc  cacheTests.h  cache_test.cc  cbCommTest.cc  cbCommTest.h  cb_comm_test.cc  config.json  config.txt  config_auth.json  config_bad_mongo.json  config_mongo.json  (+58 more)
tests/mocks/: CMakeLists.txt  http_mock.cc  http_mock.h  util_functions.cc  util_functions.h
tests/performance/: DeleteRESTCbroker.jmx  ObsNotifyCbroker.jmx  RegistersRESTCbroker.jmx
tests/simulators/simucb/: simuCB.py  start_simuCB.sh
(+615 files in other folders)
